--- a/modules/seminar/templates/invite.tex
+++ b/modules/seminar/templates/invite.tex
@@ -1,11 +1,22 @@
-(@ extends 'base.tex' @)
- 
-(@ block content @)
+\documentclass[12pt, twoside]{article}
+
+\input{core/core.tex}
+\input{core/format.tex}
+\input{input/(* module.id *)/(* competition.id *)/static/format-override.tex}
+
+\input{input/(* module.id *)/format-root.tex}
+\input{input/(* module.id *)/(* competition.id *)/format-competition.tex}
+\input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/format-volume.tex}
+\input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/(* semester.id *)/format-semester.tex}
+
+\begin{document}
+    \loadgeometry{main}
     \pagestyle{main-(* competition.id *)}
-    
+
     (@ for child in semester.camp.children @)
     \thispagestyle{first-(* competition.id *)-(* volume.id *)-(* semester.id *)}
-    \vspace*{8mm}
+    \loadgeometry{first}
+    \afterpage{\aftergroup\restoregeometry}%
     \section{Pozvánka na sústredenie}
         Mil(* 'ý' if child.male else 'á'*) riešiteľ(* '' if child.male else 'ka' *) (* child.name *) (* child.surname *),
 
@@ -18,19 +29,24 @@
 
         \begin{itemize}
             \item Prihlasovací formulár nájdeš na stránke \URL{(* semester.camp.application.URL *)}.
-            \item Prihlasovať sa môžeš najneskôr do \textbf{(* semester.camp.application.deadline.strftime('%d.~%m.~%Y') *)}. 
+            \item Prihlasovať sa môžeš najneskôr do \textbf{(* semester.camp.application.deadline.strftime('%d.~%m.~%Y') *)}.
             \item Sústredenie sa bude konať v(@ if semester.camp.accomodation.name.locative|first|lower in ['f', 'v'] @)o(@ endif @)~\textbf{(* semester.camp.accomodation.name.locative *)},
                 (* semester.camp.accomodation.location.nominative *) (@ if semester.camp.accomodation.URL @) (\URL{(* semester.camp.accomodation.URL *)})(@ endif @).
-            \item Cena sústredenia nepresiahne \textbf{\SI{(* semester.camp.accomodation.price *)}{\eur}} (v~cene je zarátaná strava, ubytovanie,
+            \item Cena sústredenia bude \textbf{\SI{(* semester.camp.accomodation.price *)}{\eur}} (v~cene je zarátaná strava, ubytovanie,
                 doprava z~\textbf{(* semester.camp.transport.gather.place.genitive *)} do \textbf{(* semester.camp.accomodation.location.genitive *)}
-                a~späť do~\textbf{(* semester.camp.transport.disband.place.genitive *)}), platí sa na mieste.
-            \item Stretneme sa \textbf{(* semester.camp.dates.begin.strftime('%d.~%m.~%Y') *)} na železničnej stanici v~\textbf{(* semester.camp.transport.gather.place.locative *)},
-                odkiaľ spolu pôjdeme autobusom o~\textbf{(* semester.camp.transport.gather.time *)} do miesta konania sústredenia.
-            \item Ak sa inak nedá, na sústredenie sa môžeš dopraviť aj samostatne, odporúčame však príchod do (* semester.camp.accomodation.location.genitive *) pred \textbf{(* semester.camp.transport.arrive.time *)}.
+                a~späť do~\textbf{(* semester.camp.transport.disband.place.genitive *)}). \textbf{Platí sa pred sústredením,
+                prevodom na účet.} Po vyplnení a prijatí tvojej prihlášky ti budú neskôr zaslané inštrukcie k platbe e-mailom.
+                Ak by výška účastníckeho poplatku mala zapríčiniť Tvoju neúčasť na sústredení,
+                alebo je pre teba platba prevodom prekážkou, prosím kontaktuj naše finančné oddelenie e-mailom na \href{mailto:(* semester.camp.finance.email *)}{(* semester.camp.finance.email *)} a spolu niečo vymyslíme.
+            \item Stretneme sa \textbf{(* semester.camp.dates.begin.strftime('%d.~%m.~%Y') *)}
+                na železničnej stanici v~\textbf{(* semester.camp.transport.gather.place.locative *)},
+                odkiaľ spolu pôjdeme %autobusom
+                o~\textbf{(* semester.camp.transport.gather.time *)} do miesta konania sústredenia.
+            %\item Ak sa inak nedá, na sústredenie sa môžeš dopraviť aj samostatne, odporúčame však príchod do (* semester.camp.accomodation.location.genitive *) pred \textbf{(* semester.camp.transport.arrive.time *)}.
             \item Z(@ if semester.camp.accomodation.location.genitive|first|lower in ['z', 'ž', 's', 'š'] @)o(@ endif @)~(* semester.camp.accomodation.location.genitive *)
                 odídeme dňa \textbf{(* semester.camp.dates.end.strftime('%d.~%m.~%Y') *)}
-                o~\textbf{(* semester.camp.transport.depart.time *)} a do (* semester.camp.transport.disband.place.genitive *)
-                spoločne zo sústredenia dorazíme autobusom o~\textbf{(* semester.camp.transport.disband.time *)}.
+                o~\textbf{(* semester.camp.transport.depart.time *)}. %a do (* semester.camp.transport.disband.place.genitive *)
+            %    spoločne zo sústredenia dorazíme autobusom o~\textbf{(* semester.camp.transport.disband.time *)}.
             \item Nezabudni si so sebou priniesť (* semester.camp.stuff.all|formatList *).%
                 (@ if semester.camp.stuff.boys and child.male @)Okrem toho budeš potrebovať (* semester.camp.stuff.boys|formatList *).(@ endif @)%
                 (@ if semester.camp.stuff.girls and child.male @)Okrem toho budeš potrebovať (* semester.camp.stuff.girls|formatList *).(@ endif @)%
@@ -40,6 +56,7 @@
         \end{itemize}
 
     \clearpage
+    \setcounter{page}{2}
 
     \section{Odporúčaná doprava}
         \subsection{Tam}
@@ -69,7 +86,7 @@
         \vspace{5mm}
 
         \hfill (* competition.head.name *), hlavný vedúci (* competition.short *)
-    
+
     \cutHere
 
     \section{Potvrdenie o~bezinfekčnosti}
@@ -85,10 +102,10 @@
         \vspace{5mm}
 
         V~\dotfill dňa \dotfill, \hfill podpis zákonného zástupcu \dotfill
-        \vspace*{5mm}
+        %\vspace*{5mm}
 
-    \cutHere
+    %\cutHere
     (@ if not loop.last @)\newpage(@ endif @)
 
     (@ endfor @)
-(@ endblock content @)
+\end{document}
