Fix \skull command

--- a/core/tex/fonts.tex
+++ b/core/tex/fonts.tex
@@ -48,7 +48,7 @@
     UprightFont     = *-r ,
     BoldFont        = *-b ,
     ItalicFont      = *-i ,
-    BoldItalicFont  = *-bi    
+    BoldItalicFont  = *-bi
 ]{verdana}
 
 % Fixes mathspec bug -- URL numbers are normally rendered with upright font
@@ -64,3 +64,7 @@
     \DeclareMathSymbol{8}{\mathalpha}{\eu@DigitsArabic@symfont}{`8}
     \DeclareMathSymbol{9}{\mathalpha}{\eu@DigitsArabic@symfont}{`9}
 \makeatother
+
+\DeclareFontFamily{U}{skulls}{}
+\DeclareFontShape{U}{skulls}{m}{n}{ <-> skull }{}
+\newcommand{\skull}{\text{\usefont{U}{skulls}{m}{n}\symbol{'101}}}
