--- a/modules/seminar/templates/invite.tex
+++ b/modules/seminar/templates/invite.tex
@@ -1,15 +1,6 @@
-\documentclass[12pt, twoside]{article}
+(@ extends 'base.tex' @)
 
-\input{core/core.tex}
-\input{core/format.tex}
-\input{input/(* module.id *)/(* competition.id *)/static/format-override.tex}
-
-\input{input/(* module.id *)/format-root.tex}
-\input{input/(* module.id *)/(* competition.id *)/format-competition.tex}
-\input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/format-volume.tex}
-\input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/(* semester.id *)/format-semester.tex}
-
-\begin{document}
+(@ block content @)
     \loadgeometry{main}
     \pagestyle{main-(* competition.id *)}
 
