--- a/modules/scholar/templates/handout-students.tex
+++ b/modules/scholar/templates/handout-students.tex
@@ -1,5 +1,5 @@
 (@ extends 'handout-base.tex' @)
 
 (@ block content @)
-    \input{input/scholar/(* course.id *)/(* year.id *)/handouts/(* issue.id *)/content.tex}
+    \input{\activeDirectory/content.tex}
 (@ endblock content @)
