--- a/modules/scholar/templates/handout-base.tex
+++ b/modules/scholar/templates/handout-base.tex
@@ -1,13 +1,14 @@
 \documentclass[12pt, twoside]{dgs}
 
+\RenewDocumentCommand{\activeDirectory}{}{\rootDirectory/(* module.id *)/(* course.id *)/(* year.id *)/handouts/(* issue.id *)/}%
+
 \input{input/scholar/(* course.id *)/static/format-override.tex}
-\input{input/scholar/(* course.id *)/(* year.id *)/handouts/(* issue.id *)/format-course.tex}
-\input{input/scholar/(* course.id *)/(* year.id *)/handouts/(* issue.id *)/format-handout.tex}
+\input{\activeDirectory/format-course.tex}
+\input{\activeDirectory/format-handout.tex}
  
 \begin{document}
     \pagestyle{handout}
     \setcounter{section}{(* issue.number - 1 *)}
-    \RenewDocumentCommand{\activeDirectory}{}{\rootDirectory/(* module.id *)/(* course.id *)/(* year.id *)/handouts/(* issue.id *)/}%
     \section{Cvičenie č. (* issue.number *)(@ block subtitle @)(@ endblock subtitle @)}
     (@ block content @)(@ endblock content @)
 \end{document}
