--- a/modules/naboj/templates/base-venues.tex
+++ b/modules/naboj/templates/base-venues.tex
@@ -11,9 +11,10 @@
     }
 
     \newgeometry{
-        left = 5mm,
-        right = 5mm,
-        bottom = 3mm,
-        top = 0mm
+        paper       = a4paper,
+        left        = 5mm,
+        right       = 5mm,
+        bottom      = 3mm,
+        top         = 0mm,
     }
 (@ endblock @)
