--- a/modules/naboj/templates/cover.tex
+++ b/modules/naboj/templates/cover.tex
@@ -2,12 +2,13 @@
 
 (@ block extras @)
     \newgeometry{
-        left = 20mm,
-        right = 20mm,
-        bottom = 20mm,
-        top = 20mm,
-        headheight = 0pt,
-        footskip = 0pt
+        paper       = a4paper,
+        left        = 20mm,
+        right       = 20mm,
+        bottom      = 20mm,
+        top         = 20mm,
+        headheight  = 0pt,
+        footskip    = 0pt,
     }
 (@ endblock @)
 
