--- a/modules/naboj/templates/tearoff.tex
+++ b/modules/naboj/templates/tearoff.tex
@@ -10,13 +10,13 @@
                 \setcounter{team}{(* team.id *)}%
                 \RenewDocumentCommand{\activeDirectory}{}{\rootDirectory/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* team.language *)/(* problem.id *)}%
 
-                \begin{minipage}[t][91mm][t]{\textwidth}%
-                    \begin{minipage}[t][81mm][t]{0.875\linewidth}\vspace{0pt}%
+                \begin{minipage}[t][95mm][t]{\textwidth}%
+                    \begin{minipage}[t][85mm][t]{0.875\linewidth}\vspace{0pt}%
                         \subsection{\texorpdfstring{(* problem.number *)}{(* problem.number *). (* problem.id *)}}%
                         \setlength{\parskip}{6pt}
                         \protectedInput{\activeDirectory/problem.tex}%
                     \end{minipage}%
-                    \begin{minipage}[t][81mm][t]{0.125\linewidth}\vspace{0pt}%
+                    \begin{minipage}[t][85mm][t]{0.125\linewidth}\vspace{0pt}%
                         \hspace{2mm}
                         \rotatebox{90}{%
                             \hspace{16mm}
@@ -30,7 +30,7 @@
                         \hspace{1mm}
                         \rotatebox{90}{%
                             \includegraphics[%
-                                width = 70mm, height = 15mm, page = (* team.number * volume.problems|length + problem.number *)]{%
+                                width = 78mm, height = 13mm, page = (* team.number * volume.problems|length + problem.number *)]{%
                                 \rootDirectory/(* module.id *)/(* competition.id *)/(* volume.id *)/venues/(* venue.id *)/barcodes.pdf%
                             }%
                             \hspace{8mm}%
@@ -38,7 +38,7 @@
                     \end{minipage}
                     {\small (* i18n.get(team.language).team *) \textbf{(* team.id *)}: (* team.name *)}
                 \end{minipage}%
-                (@ if loop.last @)\newpage(@ else @)\\(@ endif @)
+                (@ if loop.last @)\newpage(@ else @)\vspace*{-2mm}(@ endif @)
             (@ endfor @)
         (@ endfor @)
     (@ endfor @)
