Microfixes to Náboj

--- a/core/tex/dgs.cls
+++ b/core/tex/dgs.cls
@@ -40,6 +40,7 @@
 \RequirePackage{hyphenat}
 \RequirePackage{nicefrac}
 \RequirePackage{pifont}
+\RequirePackage{chngcntr}
 \RequirePackage{fancyvrb}                                   % fancy verbatim (currently unused)
 \RequirePackage[version=4]{mhchem}
 
