--- a/core/tex/math.tex
+++ b/core/tex/math.tex
@@ -30,8 +30,8 @@
 \NewDocumentCommand{\Lim}{m m}{\lim\limits_{#1 \rightarrow #2}}
 \NewDocumentCommand{\Exp}{m}{\mathrm{e}^{#1}}
 \NewDocumentCommand{\LogTen}{}{\log_{10}}
-\NewDocumentCommand{\MustEqual}{}{\overset{!}{=}}
-\NewDocumentCommand{\DefEqual}{}{\overset{\mathrm{def}}{=}}
+\NewDocumentCommand{\MustEqual}{}{\stackrel{!}{=}}
+\NewDocumentCommand{\DefEqual}{}{\stackrel{\mathrm{def}}{=}}
 \NewDocumentCommand{\Implies}{}{\quad\Rightarrow\quad}
 
 \NewDocumentCommand{\Nuclide}{O{} O{} m}{\ce{^{#1}_{#2}#3}}
