--- a/modules/naboj/templates/booklet.tex
+++ b/modules/naboj/templates/booklet.tex
@@ -31,6 +31,7 @@
         \pagestyle{solutions}    
         (@ for problem in volume.problems @)%
             \setcounter{problem}{(* problem.number *)}%
+            \setcounter{equation}{0}%
             \RenewDocumentCommand{\activeDirectory}{}{\rootDirectory/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/(* problem.id *)}%
             \subsection{\texorpdfstring{(* problem.number *)}{(* problem.number *). (* problem.id *)}}%
             \label{ssc:solution-(* problem.id*)}%
