--- a/core/tex/siunitx.tex
+++ b/core/tex/siunitx.tex
@@ -16,6 +16,8 @@
     retain-explicit-plus    = true,                         % zachovávame explicitné +
 }
 
+\RenewDocumentCommand{\Sun}{}{\odot}
+
 \DeclareSIUnit{\gforce}{g}
 \DeclareSIUnit{\year}{y}
 \DeclareSIUnit{\au}{AU}
