--- a/modules/naboj/templates/base.tex
+++ b/modules/naboj/templates/base.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt, twoside]{dgs}
+\documentclass[(@ block documentclass @)twoside(@ endblock @)]{dgs}
 
 \input{input/(* module.id *)/(* competition.id *)/static/format-override.tex}
 (@ block specific @)(@ endblock @)
