--- a/modules/naboj/templates/tearoff.tex
+++ b/modules/naboj/templates/tearoff.tex
@@ -11,33 +11,37 @@
                 \RenewDocumentCommand{\activeDirectory}{}{\rootDirectory/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* team.language *)/(* problem.id *)}%
 
                 \begin{minipage}[t][96mm][t]{\textwidth}%
-                    \begin{minipage}[t][88mm][t]{0.875\linewidth}\vspace{0pt}%
+                    \begin{minipage}[t][88mm][t]{0.85\linewidth}%
+                        \vspace{0pt}%
                         \subsection{\texorpdfstring{(* problem.number *)}{(* problem.number *). (* problem.id *)}}%
                         \setlength{\parskip}{6pt}
                         \protectedInput{\activeDirectory/problem.tex}%
                     \end{minipage}%
-                    \begin{minipage}[t][88mm][t]{0.125\linewidth}\vspace{0pt}%
-                        \hspace{5mm}
+                    \begin{minipage}[t][88mm][t]{0.15\linewidth}
+                        \vspace{0mm}%
+                        \hspace{4mm}%
                         \rotatebox{90}{%
+                            \hspace{23mm}%
                             \textsf{%
-                                \fontsize{18}{0}\selectfont(* '%03d'|format(venue.number) *)%
-                                \fontsize{24}{0}\selectfont(* '%03d'|format(team.id) *)%
-                                \fontsize{18}{0}\selectfont(* '%02d'|format(problem.number) *)%
-                                \fontsize{18}{0}\selectfont(* '%01d'|format(checkdigit(venue.number, team.id, problem.number)) *)%
+                                \fontsize{20}{0}\selectfont(* '%03d'|format(venue.number) *)%
+                                \fontsize{28}{0}\selectfont(* '%03d'|format(team.id) *)%
+                                \fontsize{20}{0}\selectfont(* '%02d'|format(problem.number) *)%
+                                \fontsize{20}{0}\selectfont(* '%01d'|format(checkdigit(venue.number, team.id, problem.number)) *)%
                             }%
                         }%
-                        \hspace{5mm}
+                        \hspace{2pt}
                         \rotatebox{90}{%
+                            \hspace{6mm}%
                             \includegraphics[%
-                                width = 80mm, height = 13mm, page = (* team.number * volume.problems|length + problem.number *)]{%
+                                width = 80mm, height = 14mm, page = (* team.number * volume.problems|length + problem.number *)]{%
                                 \rootDirectory/(* module.id *)/(* competition.id *)/(* volume.id *)/venues/(* venue.id *)/barcodes.pdf%
                             }%
-                            \hspace{8mm}%
+                            \hspace{6mm}%
                         }%
                     \end{minipage}
                     {\small (* i18n.get(team.language).team *) \textbf{(* team.id *)}: (* team.name *)}
                 \end{minipage}%
-                (@ if loop.last @)\newpage(@ else @)\vspace*{-2mm}(@ endif @)
+                (@ if loop.last @)\newpage(@ else @)\vspace*{-1mm}(@ endif @)
             (@ endfor @)
         (@ endfor @)
     (@ endfor @)
