--- a/modules/naboj/templates/booklet.tex
+++ b/modules/naboj/templates/booklet.tex
@@ -32,6 +32,8 @@
         (@ for problem in volume.problems @)%
             \setcounter{problem}{(* problem.number *)}%
             \setcounter{equation}{0}%
+            \setcounter{table}{0}%
+            \setcounter{figure}{0}%
             \RenewDocumentCommand{\activeDirectory}{}{\rootDirectory/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/(* problem.id *)}%
             \subsection{\texorpdfstring{(* problem.number *)}{(* problem.number *). (* problem.id *)}}%
             \label{ssc:solution-(* problem.id*)}%
