Fixed Markdown's smart

--- a/modules/scholar/templates/homework.tex
+++ b/modules/scholar/templates/homework.tex
@@ -11,7 +11,7 @@
     \section{Domáca úloha č. (* issue.number *)}
     \begin{center}
         \textit{%
-            Vypracovanú úlohu odovzdajte na papieri alebo \href{mailto:(* course.teacher.email *)}{e-mailom}
+            Vypracovanú úlohu odovzdajte na papieri alebo \href{mailto:(* year.teacher.email *)}{e-mailom}
             najneskôr do začiatku cvičenia (* issue.deadline.strftime('%d. %m. %Y') *).            
             Odovzdaním čestne prehlasujete, že riešenia sú vaše vlastné.}
     \end{center}
