--- a/modules/seminar/format/format-root.tex
+++ b/modules/seminar/format/format-root.tex
@@ -19,4 +19,28 @@
     \fancyhf{}
 }  
 
+\newgeometry{
+    left                    = 15mm,
+    right                   = 15mm,
+    top                     = 15mm,
+    bottom                  = 15mm,
+    headheight              = 75pt,
+    headsep                 = 16pt,
+    footskip                = 32pt,
+    includeheadfoot,                                        % we wish to include header and footer into page dimensions
+}
+\savegeometry{firstpage}
+
+\newgeometry{
+    left                    = 15mm,
+    right                   = 15mm,
+    top                     = 15mm,
+    bottom                  = 15mm,
+    headheight              = 20pt,
+    headsep                 = 16pt,
+    footskip                = 32pt,
+    includeheadfoot,                                        % we wish to include header and footer into page dimensions
+}
+\savegeometry{main}
+
 \numberwithin{equation}{subsection}
