--- a/modules/seminar/templates/solutions.tex
+++ b/modules/seminar/templates/solutions.tex
@@ -1,34 +1,28 @@
-(@ extends 'base.tex' @)
+(@ extends 'base-booklets.tex' @)
  
-(@ block content @)
-    \input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/(* semester.id *)/(* round.id *)/format-round.tex}
-
-    \pagestyle{seminar-solutions-(* competition.id *)-(* volume.id *)-(* semester.id *)-(* round.id *)}
-    \thispagestyle{seminar-first-(* competition.id *)-(* volume.id *)-(* semester.id *)}
-    \vspace*{8mm}
-   
+(@ block inner @)
     \section{\texorpdfstring{Riešenia (* round.id *). kola (* semester.genitive *) časti}{Riešenia}}
         
     (@ for pid, problem in round.problems.items() @)%
-    \setcounter{volume}{(* volume.number *)}%
-    \setcounter{semester}{(* semester.number *)}%
-    \setcounter{round}{(* round.number *)}%
-    \setcounter{problem}{(* problem.number *)}%
-    \RenewDocumentCommand{\activeDirectory}{}{\rootDirectory/(* module.id *)/(* competition.id *)/(* volume.id *)/(* semester.id *)/(* round.id *)/(* problem.id *)}%
+        \setcounter{volume}{(* volume.number *)}%
+        \setcounter{semester}{(* semester.number *)}%
+        \setcounter{round}{(* round.number *)}%
+        \setcounter{problem}{(* problem.number *)}%
+        \RenewDocumentCommand{\activeDirectory}{}{\rootDirectory/(* module.id *)/(* competition.id *)/(* volume.id *)/(* semester.id *)/(* round.id *)/(* problem.id *)}%
 
-    \subsection{%
-        \texorpdfstring{%
-            \large \textbf{(* problem.title *)} \hfill \normalsize%
-            (@ if problem.solutionBy @)%
-                vzorák (* problem.solutionBy|formatList *)%
-            (@ endif @)%
-            (@ if problem.solutionBy and problem.evaluation @), (@ endif @)%
-            (@ if problem.evaluation @)%
-                opravoval(* problem.genderSuffix *) (* problem.evaluation|formatList *)% 
-            (@ endif @)%
-        }{(* round.number *).(* problem.number *) (* problem.title *)}%
-    }
+        \subsection{%
+            \texorpdfstring{%
+                \large \textbf{(* problem.title *)} \hfill \normalsize%
+                (@ if problem.solutionBy @)%
+                    vzorák (* problem.solutionBy|formatList *)%
+                (@ endif @)%
+                (@ if problem.solutionBy and problem.evaluation @), (@ endif @)%
+                (@ if problem.evaluation @)%
+                    opravoval(* problem.genderSuffix *) (* problem.evaluation|formatList *)% 
+                (@ endif @)%
+            }{(* round.number *).(* problem.number *) (* problem.title *)}%
+        }
 
-    \protectedInput{\activeDirectory/solution.tex}%
+        \protectedInput{\activeDirectory/solution.tex}%
     (@ endfor @)
-(@ endblock content @)
+(@ endblock inner @)
