--- a/modules/naboj/format/format-language.tex
+++ b/modules/naboj/format/format-language.tex
@@ -10,7 +10,7 @@
     footskip                = 32pt,
     includeheadfoot,
 }
-\savegeometry{first}
+\savegeometry{firstpage}
 
 \newgeometry{
     left                    = 15mm,
