--- a/modules/seminar/templates/base.tex
+++ b/modules/seminar/templates/base.tex
@@ -5,6 +5,7 @@
 \input{input/(* module.id *)/(* competition.id *)/format-competition.tex}
 \input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/format-volume.tex}
 \input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/(* semester.id *)/format-semester.tex}
+(@ block specific @)(@ endblock @)
 
 \newcounter{volume}
 \newcounter{semester}
