--- a/core/tex/siunitx.tex
+++ b/core/tex/siunitx.tex
@@ -12,7 +12,8 @@
     range-units             = single,
     range-phrase            = {\text{ -- }},                % 5 -- 10 m/s
     list-units              = single,                       %
-    list-final-separator    = {\ a\ },                      % 5, 7 a 10 m/s
+    list-pair-separator     = {\text{ a }},                 % 5 a 10 m/s
+    list-final-separator    = {\text{ a }},                 % 5, 7 a 10 m/s
     retain-explicit-plus    = true,                         % zachovávame explicitné +
 }
 
