--- a/modules/seminar/format/format-root.tex
+++ b/modules/seminar/format/format-root.tex
@@ -1,6 +1,32 @@
 % DeGeŠ style file
 % module: seminar
 
+\newgeometry{
+    left                    = 15mm,
+    right                   = 15mm,
+    top                     = 15mm,
+    bottom                  = 15mm,
+    headheight              = 60pt,
+    headsep                 = 16pt,
+    footskip                = 32pt,
+    showframe,
+    includeheadfoot,                                        % we wish to include header and footer into page dimensions
+}
+\savegeometry{firstpage}
+
+\newgeometry{
+    left                    = 15mm,
+    right                   = 15mm,
+    top                     = 15mm,
+    bottom                  = 15mm,
+    headheight              = 20pt,
+    headsep                 = 16pt,
+    footskip                = 32pt,
+    showframe,
+    includeheadfoot,                                        % we wish to include header and footer into page dimensions
+}
+\savegeometry{main}
+
 \fancypagestyle{seminar-main}{
     \titleformat{\section}[hang]{\centering\LARGE}{}{0pt}{}
     \titleformat{\subsection}[hang]{\bfseries\large}{}{0pt}{}[]
@@ -18,29 +44,5 @@
 \fancypagestyle{seminar-first}{%
     \fancyhf{}
 }  
-
-\newgeometry{
-    left                    = 15mm,
-    right                   = 15mm,
-    top                     = 15mm,
-    bottom                  = 15mm,
-    headheight              = 75pt,
-    headsep                 = 16pt,
-    footskip                = 32pt,
-    includeheadfoot,                                        % we wish to include header and footer into page dimensions
-}
-\savegeometry{firstpage}
-
-\newgeometry{
-    left                    = 15mm,
-    right                   = 15mm,
-    top                     = 15mm,
-    bottom                  = 15mm,
-    headheight              = 20pt,
-    headsep                 = 16pt,
-    footskip                = 32pt,
-    includeheadfoot,                                        % we wish to include header and footer into page dimensions
-}
-\savegeometry{main}
 
 \numberwithin{equation}{subsection}
