--- a/modules/seminar/templates/solutions.tex
+++ b/modules/seminar/templates/solutions.tex
@@ -1,6 +1,8 @@
 (@ extends 'base-booklets.tex' @)
  
 (@ block inner @)
+    \pagestyle{seminar-solutions-(* competition.id *)-(* volume.id *)-(* semester.id *)-(* round.id *)}
+
     \section{\texorpdfstring{Riešenia (* round.id *). kola (* semester.genitive *) časti}{Riešenia}}
         
     (@ for pid, problem in round.problems.items() @)%
