Reworked i18n with pandoc-crossref, reverted to +smart

--- a/modules/naboj/templates/base-languages.tex
+++ b/modules/naboj/templates/base-languages.tex
@@ -3,7 +3,7 @@
 (@ block documentclass @)twoside(@ endblock @)
 
 (@ block specific @)
-    \input{core/i18n/(* language.id *).tex}
+    \input{core/i18n/(* language.id *)/override.tex}
     \input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/format-language.tex}
     \setmainlanguage{(* language.id *)}
 (@ endblock @)
